@@ -15,6 +15,7 @@ VERSION 3.0.1
    * Improve strings in user interface (incl. BR 343896, BR 234854)
 
   BUGFIXES:
+   * Fix TagMatchBias to interpret length as seconds (BR 375565)
 
 
 VERSION 3.0.0
